--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-portfolio-architect",
+  "name": "developer-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
